# aetheris-agents

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  mise.toml
agents/: capability_matrix.exs  capability_matrix_api_gateway.exs  capability_matrix_api_tenant.exs  capability_matrix_assemble.exs  capability_matrix_docbuilder.exs  capability_matrix_drive.exs  capability_matrix_eduloka.exs  capability_matrix_email.exs  capability_matrix_payslip.exs  capability_matrix_provenance.exs  fixture_unlabelled_fork.exs  mock_orchestrator.exs  notes.md  orchestrator.exs
api/: README.md  milestone.md  runbook.md  tools.json
boxy-pipeline/: .gitignore  README.md  main.py  requirements.txt
chf/: canonical-artifact-schemas.md
docbuilder/: README.md  milestone.md  requirements.txt  runbook.md
docs/: agent-creation-guide.md  backlog-2026-06.md  capability-matrix-runbook.md  capability-matrix.md  google-export-payroll-to-csv.md  handoff-aetheris-provenance-rig.md  patterns.md  project-knowledge-manifest.md  recap-2026-05-31-model-config-and-capability-matrix.md  triad-loop.md  uc-api-agent-design.md
drive/: .gitignore  README.md  milestone.md  requirements.txt  runbook.md  tools.json
eduloka/: .gitignore  README.md  milestone.md  requirements.txt  runbook.md  tools.json
email/: README.md  milestone.md  runbook.md  tools.json
mcp/: mcp_servers.json
payslip/: .gitignore  README.md  milestone.md  runbook.md  tools.json
prompts/: README.md  (+2 more)
provenance/scanner/: Cargo.toml
provenance/scanner/src/: db.rs  main.rs  migration.rs  migrations.rs  scan.rs
(+669 files in other folders)
